tests/NormalTests/paczka1/fuzzy1/36521997.err
Error in line 9: jmKsdHC6 S102 35,3
Error in line 22: MOpGB8umD9 A320 75,0
Error in line 24: S911 A869 69,7
Error in line 35: qrIp A320 42,9
